feat: news-reader, learn redux-toolkit, redux-thunks

--- a/redux-codecademy/news-reader/package.json
+++ b/redux-codecademy/news-reader/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^1.9.5",
     "msw": "^1.2.2",
     "react": "^18.2.0",
