--- a/jest-js-react/advanced/package.json
+++ b/jest-js-react/advanced/package.json
@@ -16,6 +16,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "@types/jest": "^29.5.12"
+    "@types/jest": "^29.5.12",
+    "axios": "^1.6.8"
   }
 }
