feat: jest mock, spyOn, hooks, debug, coverage

--- a/jest-js-react/advanced/package.json
+++ b/jest-js-react/advanced/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "uuid": "^9.0.1"
   }
 }
