--- a/jest-js-react/tdd/package.json
+++ b/jest-js-react/tdd/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "advanced",
+  "name": "tdd",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch --coverage false" 
+    "test:watch": "jest --watch --coverage false"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
-  },
-  "dependencies": {
-    "@types/jest": "^29.5.12",
-    "axios": "^1.6.8",
-    "uuid": "^9.0.1"
   }
 }
